--- a/Training/index.html
+++ b/Training/index.html
@@ -1,11 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Internshala Training</title>
-</head>
-<body>
 
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Internshala Training</title>
+    </head>
+
+    <body>
+        <!-- Heading a HTML tag -->
+        <h1> This is a heading. 1</h1>
+        <hr /> <!-- Horizontal line-->
+
+        <h2>This is a heading 2</h2>
+        <h3>This is a heading 3</h3>
+        <h4>This is a heading 4</h4>
+        <h5> This is a heading 5</h5>
+        <h6> This is a heading 6</h6>
+        <h7>This is a headingn 7</h7>
+
+        <!-- Paragraph -->
+        <p>This is used to define a paragraph on a web page.</p>
+        <p>Used to define a paragraph on a web page.</p>
+
+        <!-- This is a break in line satatment -->
+        <p>This is <br /> a single paragraph <br /> with line break</p>
+
+        <!-- DIVISION -->
+        <div>
+            <h1> first Division</h1>
+            <p> This is a paragraph inside the first division.</p>
+        </div>
+        <div>
+            <h1> Second Division</h1>
+            <p>This is a paragraph inside the Second division</p>
+        </div>
+
+        <!--     SPAN     -->
+
+        <p style="color: red; background-color: skyblue; font-size:14px;">This is a paragraph. </p>
+
+        ndom paragraph. <span> This text is grouped, but with no effect.</span> <span
+            style="color: rgba(0, 0, 255, 0.918);">This is also a grouped text, which is colored differently. </span></p>
+
+        <!--    BOLD     -->
+        <p><b> This text is Bold.</b></p>
+
+        <!--      STRONG     -->
+        <p><strong>This text is Strong.</strong></p>
+
+        <!-- ITALIC    -->
+        <p><i>This text is Italic.</i></p>
+
+        <!-- EMPHASIZED -->
+        <p><em>This text is Emphasized.</em></p>
+
+        <!-- UNDERLINED -->
+        <p><u>This text is Underlined.</u></p>
+
+        <!-- IMAGE -->
+        <img src="C:\Users\harin\OneDrive\Desktop\Web Dev\Training\conifers-daylight-environment-1666021.jpg" alt="Image Error!"/>
+
+        
+
+    </body>
+
 </html>
