File Update commit

--- a/Training/index.html
+++ b/Training/index.html
@@ -59,7 +59,7 @@
         <p><u>This text is Underlined.</u></p>
 
         <!-- IMAGE -->
-        <img src="C:\Users\harin\OneDrive\Desktop\Web Dev\Training\conifers-daylight-environment-1666021.jpg" alt="Image Error!"/>
+        <img src="/Training/conifers-daylight-environment-1666021.jpg" alt="Image Error!">
 
         
 
