--- a/Training/list_Table_Forms.html
+++ b/Training/list_Table_Forms.html
@@ -129,34 +129,41 @@
     <!-- USING THE FORMS -->
 
     <form>
-        <input type="text" name="email"/> Email
-        <input type="password" name="password"/> Password <br/>
+      <input type="text" name="email" /> Email
+      <input type="password" name="password" /> Password <br />
 
-        <input type="radio" name="gender" value="male"/> Male
-        <input type="radio" name="gender" value="female"/> Female
-        <input type="radio" name="gender" value="other"/> Other <br/>
+      <input type="radio" name="gender" value="male" /> Male
+      <input type="radio" name="gender" value="female" /> Female
+      <input type="radio" name="gender" value="other" /> Other <br />
 
-        <input type="checkbox" name="interest" value="cricket"/> Cricket
-        <input type="checkbox" name="interest" value="football"/> Football
-        <input type="checkbox" name="interest" value="basketball"/> Basketball
-        <input type="checkbox" name="interest" value="chess"/> Chess <br/>
+      <input type="checkbox" name="interest" value="cricket" /> Cricket
+      <input type="checkbox" name="interest" value="football" /> Football
+      <input type="checkbox" name="interest" value="basketball" /> Basketball
+      <input type="checkbox" name="interest" value="chess" /> Chess <br />
 
-        <select name="city">
-            <option value="Kolkata"> Kolkata</option>
-            <option value="Delhi"> Delhi</option>
-            <option value="Mumbai"> Delhi</option>
-            <option value="Bangalore"> Delhi</option>
-            <option value="Outstation"> Outstation</option>
-        </select> <br/>
+      <select name="city">
+        <option value="Kolkata">Kolkata</option>
+        <option value="Delhi">Delhi</option>
+        <option value="Mumbai">Delhi</option>
+        <option value="Bangalore">Delhi</option>
+        <option value="Outstation">Outstation</option>
+      </select>
+      <br />
 
-        <textarea name="adress" rows="6" cols="50">
+      <textarea name="adress" rows="6" cols="50">
             Wrtite your adress...
-        </textarea> <br/>
+        </textarea
+      >
+      <br />
 
-        <input type="submit" name="submit" value="submit"/>
-
+      <input type="submit" name="submit" value="submit" />
     </form>
 
-    <div>    <p> This is a paragraph.</p>    <a href="homepage.html">click here</a></div>
+    <div>
+      <p>This is a paragraph.</p>
+      <a href="homepage.html">click here</a>
+
+      
+    </div>
   </body>
 </html>
