--- a/Training/sample.html
+++ b/Training/sample.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS page</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <h1>This is a heading.</h1>
-    <p>This is a paragraph.</p>
+    <p>This is a paragraph 1.</p>
+
+    <!-- Naming convention for id -->
+    <p id="abc">This is a paragraph 2.</p>
+
+    <p>This is a paragraph 3.</p>
+    <p>This is a paragraph 4.</p>
     <p>This is another paragraph.</p>
+
+<!-- Class Selectors -->
+
+    <h1 class="xyz">This is a heading.</h1>
+    <p class="xyz">This is a paragraph 1 with class xyz.</p>
+    <p>This is a paragraph 3.</p>
+    <p class="xyz">This is a paragraph 4 with class xyz.</p>
+    <p class="xyz">This is another paragraph with class xyz.</p>
+
+    
   </body>
-</html>
+</html> 
